--- a/index.html
+++ b/index.html
@@ -1,41 +1,82 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>霍迎雪的主页</title>
-</head>
-<body>
-  <div class="clean_content">
-    <div>许敏宣誓</div>
-    <div>霍迎雪是个漂亮女孩</div>
-    <div>要对人家温柔，文雅，幽默</div>
-  </div>
-</body>
-<style>
-  body{
-    background-image: url(./huoyingxue.jpeg);
-    background-size: 100% 100%;
-  }
-  .clean_content {
-    width:100vw;
-    height:100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    color: pink;
-    font-size: 50px;
-    background: linear-gradient(45deg,#000 30%,transparent 0,transparent 70%,#000 0),linear-gradient(-45deg,#000 30%,transparent 0,transparent 70%,#000 0),linear-gradient(90deg,#dc143c 30%,transparent 0,transparent 70%,#dc143c 0) red;
-    background-size: 20px 20px,20px 20px,1px 1px;
-    background-position: 0 0,0 0,0 0;
-    -webkit-background-clip: text;
-    -webkit-text-stroke: 2px #fff;
-    filter: drop-shadow(0 0 1px black) drop-shadow(0 0 1px black) drop-shadow(0 0 1px black) drop-shadow(0 0 1px black) drop-shadow(0 0 1px black) drop-shadow(0 0 1px black) drop-shadow(0 0 1px black) drop-shadow(0 0 1px black) drop-shadow(0 0 2px crimson);
-    -webkit-animation: bg-shift 1s ease-in-out infinite alternate-reverse,swing 2s ease-in-out infinite;
-    animation: bg-shift 1s ease-in-out infinite alternate-reverse,swing 2s ease-in-out infinite;
-    
-}
-@keyframes bg-shift {
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>霍迎雪的主页</title>
+  </head>
+  <body>
+    <div class="bg_img">
+      <img class="img img-object" src="./huoyingxue.jpeg" />
+    </div>
+    <div class="clean_content">
+      <div>许敏宣誓</div>
+      <div>霍迎雪是个漂亮女孩</div>
+      <div>要对人家温柔，文雅，幽默</div>
+    </div>
+  </body>
+  <style>
+    .bg_img {
+      position: absolute;
+      width: 100vw;
+      height: 100vh;
+    }
+    .img {
+      width: 100%;
+      height: 100%;
+      border: black 1px solid;
+      background-color: darkgrey;
+    }
+    /* 图片自适应的样式 */
+    .img-object {
+      object-fit: cover;
+      object-position: 50% 20%;
+    }
+    .clean_content {
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: pink;
+      font-size: 50px;
+      background: linear-gradient(
+          45deg,
+          #000 30%,
+          transparent 0,
+          transparent 70%,
+          #000 0
+        ),
+        linear-gradient(
+          -45deg,
+          #000 30%,
+          transparent 0,
+          transparent 70%,
+          #000 0
+        ),
+        linear-gradient(
+            90deg,
+            #dc143c 30%,
+            transparent 0,
+            transparent 70%,
+            #dc143c 0
+          )
+          red;
+      background-size: 20px 20px, 20px 20px, 1px 1px;
+      background-position: 0 0, 0 0, 0 0;
+      -webkit-background-clip: text;
+      -webkit-text-stroke: 2px #fff;
+      filter: drop-shadow(0 0 1px black) drop-shadow(0 0 1px black)
+        drop-shadow(0 0 1px black) drop-shadow(0 0 1px black)
+        drop-shadow(0 0 1px black) drop-shadow(0 0 1px black)
+        drop-shadow(0 0 1px black) drop-shadow(0 0 1px black)
+        drop-shadow(0 0 2px crimson);
+      -webkit-animation: bg-shift 1s ease-in-out infinite alternate-reverse,
+        swing 2s ease-in-out infinite;
+      animation: bg-shift 1s ease-in-out infinite alternate-reverse,
+        swing 2s ease-in-out infinite;
+    }
+    @keyframes bg-shift {
       10% {
         transform: translateY(2px);
       }
@@ -67,5 +108,5 @@
         transform: translateY(0);
       }
     }
-</style>
+  </style>
 </html>
