--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     </div>
   </body>
   <style>
+      body {
+      background-image: url(./huoyingxue.jpeg);
+      background-size: 100% 100%;
+    }
     .bg_img {
       position: absolute;
       width: 100vw;
